--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "npm-run-all --parallel storybook:serve serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "storybook:build": "vue-cli-service storybook:build -c config/storybook",
+    "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
   },
   "dependencies": {
     "vue": "^2.5.21"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.0",
+    "@storybook/addon-links": "^4.1.0",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "vue-axios": "^2.1.4",
+    "vue-cli-plugin-storybook": "^0.5.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
