--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storybook-proxy-webpack",
+  "name": "storybook-vue-webpack-proxy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
